Move TESTING.md to docs/dev-testing.md
Signed-off-by: Russell Bryant <rbryant@redhat.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -74,6 +74,7 @@ nav:
     - Troubleshooting: admin-troubleshooting.md
   - Development:
     - Architecture: dev-architecture.md
+    - Testing: dev-testing.md
     - Contributing: dev-contributing.md
 
 extra:
