--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,16 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    services:
+      redis:
+        image: redis:7-alpine
+        ports:
+          - 6379:6379
+        options: >-
+          --health-cmd "redis-cli ping"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -30,8 +40,8 @@ jobs:
       - name: Build
         run: make build
 
-      - name: Test
-        uses: robherley/go-test-action@v0
+      - name: Test (Short)
+        run: make test-short
 
   lint:
     runs-on: ubuntu-latest
