--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,15 +5,7 @@ updates:
     directory: "/"
     schedule:
       interval: "weekly"
-    open-pull-requests-limit: 10
-    # Optionally, you can enable auto-merge for patch updates
-    # automerge:
-    #   enabled: true
-    #   type: "patch"
-    # Optionally, you can add reviewers, assignees, or labels
-    # reviewers:
-    #   - "your-github-username"
-    # assignees:
-    #   - "your-github-username"
-    # labels:
-    #   - "dependencies"
+    groups:
+      all-dependencies:
+        patterns:
+          - "*"
